<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Android"
    android:background="#689F38"
    >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/android"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/q1A"
                android:id="@+id/textView"

                android:hint="@string/q1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"

                android:focusable="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q2A"
                android:layout_marginBottom="30dp"
                android:textSize="20sp"

                android:id="@+id/txtQ2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner2"

                android:focusable="true"


                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q3A"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"

                android:id="@+id/txtQ3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:focusable="true"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q4A"
                android:layout_marginTop="10dp"
                android:textSize="20sp"

                android:id="@+id/txtQ4" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner4"
                android:layout_marginTop="20dp"
                android:focusable="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q5A"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"

                android:id="@+id/txtQ5"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner5"
                android:focusable="true"
                />





        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="Back"
            android:onClick="buttonBack"
            android:id="@+id/btnBack"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"

            android:onClick="display"
            android:id="@+id/btnScore"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout" />
    </RelativeLayout>
</ScrollView>