<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".SouthAfricanPolitics"
    android:background="@drawable/sa1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SouthAfricanPolitics">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/q5S"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="#000000"

            android:id="@+id/txtQ5"
            android:layout_below="@+id/spinner4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/q1S"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/q1"
            android:textColor="#000000"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinner"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:focusable="true" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/q2S"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:layout_below="@+id/spinner"
            android:id="@+id/txtQ2"
            android:textColor="#000000"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/spinner2"
            android:layout_below="@+id/txtQ2"
            android:focusable="true"


            android:layout_alignRight="@+id/txtQ2"
            android:layout_alignEnd="@+id/txtQ2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/q3S"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:layout_below="@+id/spinner2"
            android:id="@+id/txtQ3"
            android:textColor="#000000"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner3"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:focusable="true"

            android:layout_below="@+id/txtQ3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/q4S"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_below="@+id/spinner3"
            android:id="@+id/txtQ4"
            android:textColor="#000000"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner4"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:layout_below="@+id/txtQ4"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner5"
            android:focusable="true"
            android:layout_below="@+id/txtQ5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Back"
            android:onClick="buttonBack"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnBack"
            android:layout_marginTop="38dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"
            android:layout_below="@+id/spinner5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="38dp"
            android:onClick="display"
            android:id="@+id/btnScore" />
    </RelativeLayout>
</ScrollView>
