<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Scrum"
    android:background="#BDBDBD"
    >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Scrum">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/scrum"

                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/q1"
                android:id="@+id/textView"

                android:hint="@string/q1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F9A825"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"

                android:focusable="true"
                android:id="@+id/spinner" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q2"
                android:layout_marginBottom="30dp"
                android:textSize="20sp"

                android:id="@+id/txtQ2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:background="#F9A825"
                android:focusable="true"


                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q3"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"

                android:id="@+id/txtQ3" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:background="#F9A825"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:focusable="true"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q4"
                android:layout_marginTop="10dp"
                android:textSize="20sp"

                android:id="@+id/txtQ4" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner4"
                android:background="#F9A825"
                android:layout_marginTop="20dp"
                android:focusable="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/q5"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"

                android:id="@+id/txtQ5"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:background="#F9A825"
                android:focusable="true"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Back"
            android:onClick="buttonBack"
            android:id="@+id/button"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"

            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"

            android:layout_marginTop="38dp"
            android:onClick="display"/>


    </RelativeLayout>
</ScrollView>